# chinese-segment

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  segment.cc  segment.h  stopwords.txt  test.cc
