CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SEGTEST)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -g -Wall -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -g -Wall")
AUX_SOURCE_DIRECTORY(. SRCS)
LINK_DIRECTORIES(./)
ADD_DEFINITIONS(-D_LINUX_ -m32 -DOS_LINUX)
ADD_EXECUTABLE(segtest ${SRCS})
TARGET_LINK_LIBRARIES(segtest pthread ICTCLAS50)
SET(EXECUTABLE_OUTPUT_PATH  .)
